--- a/src/views.njk
+++ b/src/views.njk
@@ -35,35 +35,31 @@ heroTitle: Views
         <div class="field">
             <label class="label">View name</label>
             <div class="control">
-                <input class="input" type="text" placeholder="View name">
+                <input class="input" type="text" placeholder="View name" id="view-name">
             </div>
         </div>
         <div class="field">
             <label class="label">Description</label>
             <div class="control">
-                <textarea class="textarea" placeholder="Description explaining the view"></textarea>
+                <textarea class="textarea" placeholder="Description explaining the view" id="view-description"></textarea>
             </div>
         </div>
-        <div class="dropdown">
+        <div class="dropdown" id="dropdown">
             <div class="dropdown-trigger">
-                <div class="field has-addons">
+                <div class="field">
+                    <label class="label">Add stocks</label>
                     <div class="control">
-                        <input class="input" type="text" placeholder="Find a stock">
-                    </div>
-                    <div class="control">
-                        <button class="button is-info">
-                        Add
-                        </button>
+                        <input class="input" type="text" placeholder="Company name" id="stockSearchBox">
                     </div>
                 </div>
             </div>
             <div class="dropdown-menu" id="dropdown-menu" role="menu">
-                <div class="dropdown-content">
+                <div class="dropdown-content" id="dropdownContent">
+                    <!-- template
                     <a href="#" class="dropdown-item">Dropdown item</a>
-                    <a href="#" class="dropdown-item">Other dropdown item</a>
-                    <a href="#" class="dropdown-item">Other dropdown item</a>
-                    <a href="#" class="dropdown-item">Other dropdown item</a>
-                    <a href="#" class="dropdown-item">Other dropdown item</a>
+                    -->
+                    Type 3 or more letters to get suggestions
+                    <button>nnnnnnn</button>
                 </div>
             </div>
         </div>
@@ -71,21 +67,25 @@ heroTitle: Views
             <thead>
                 <th>Symbol</th>
                 <th>Name</th>
+                <th>Last price</th>
                 <th>Actions</th>
             </thead>
-            <tbody>
+            <tbody id="stock-table-body">
+                <!-- template
                 <tr>
                     <td>APPL</td>
                     <td>Apple inc.</td>
+                    <td>45.3</td>
                     <td>remove</td>
                 </tr>
+                -->
             </tbody>
         </table>
     </section>
     <footer class="modal-card-foot">
       <div class="buttons">
-        <button class="button is-success">Save</button>
-        <button class="button">Cancel</button>
+        <button class="button is-success" id="saveViewBtn">Save</button>
+        <button class="button close-modal">Cancel</button>
       </div>
     </footer>
   </div>
@@ -104,7 +104,7 @@ heroTitle: Views
 
     function closeAllModals() {
         (document.querySelectorAll('.modal') || []).forEach(($modal) => {
-        closeModal($modal);
+            closeModal($modal);
         });
     }
 
@@ -114,23 +114,23 @@ heroTitle: Views
         const $target = document.getElementById(modal);
 
         $trigger.addEventListener('click', () => {
-        openModal($target);
+            openModal($target);
         });
     });
 
     // Add a click event on various child elements to close the parent modal
-    (document.querySelectorAll('.modal-background, .modal-close, .modal-card-head .delete, .modal-card-foot .button') || []).forEach(($close) => {
+    (document.querySelectorAll('.modal-background, .modal-close, .modal-card-head .delete, .modal-card-foot .close-modal') || []).forEach(($close) => {
         const $target = $close.closest('.modal');
 
         $close.addEventListener('click', () => {
-        closeModal($target);
+            closeModal($target);
         });
     });
 
     // Add a keyboard event to close all modals
     document.addEventListener('keydown', (event) => {
         if(event.key === "Escape") {
-        closeAllModals();
+            closeAllModals();
         }
     });
     });
