complete dividends page

--- a/src/_includes/pages.njk
+++ b/src/_includes/pages.njk
@@ -9,7 +9,7 @@ heroTitle: Hi investor,
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ title }}</title>
     <link rel="stylesheet" href="/css/bulma.min.css">
-    <script src="https://unpkg.com/@asgardeo/auth-spa@latest/dist/asgardeo-spa.production.min.js"></script>
+    <script src="/scripts/asgardeo-spa.production.min.js"></script>
     <script src="/scripts/authentication.js" type="module"></script> 
   </head>
   <body>
