--- a/src/_includes/partials/navbar.njk
+++ b/src/_includes/partials/navbar.njk
@@ -2,11 +2,14 @@
   <div class="container">
     <div id="navMenu" class="navbar-menu">
       <div class="navbar-start">
-        <a class="navbar-item">
-          Home
+        <a class="navbar-item" href="/dashboard">
+          Dashboard
         </a>
-        <a class="navbar-item">
-          Documentation
+        <a class="navbar-item" href="/views">
+          Views
+        </a>
+        <a class="navbar-item" href="/dividends">
+          Dividends
         </a>
       </div>
 
