complete edit view, settings page

--- a/src/dividends.njk
+++ b/src/dividends.njk
@@ -33,7 +33,7 @@ heroTitle: Dividends
     </tbody>
 </table>
 
-<div class="modal is-active" id="create-view-modal">
+<div class="modal" id="create-view-modal">
   <div class="modal-background"></div>
   <div class="modal-card">
     <header class="modal-card-head">
