--- a/src/_includes/pages.njk
+++ b/src/_includes/pages.njk
@@ -16,7 +16,7 @@ heroTitle: Hi investor,
   {% include "partials/navbar.njk" %}
   <section class="hero is-danger">
     <div class="hero-body">
-      <p class="title">{{ heroTitle }}</p>
+      <p class="title" id="page-hero-title">{{ heroTitle }}</p>
     </div>
   </section>
   <div class="container">
