--- a/src/_includes/partials/navbar.njk
+++ b/src/_includes/partials/navbar.njk
@@ -11,12 +11,14 @@
         <a class="navbar-item" href="/dividends">
           Dividends
         </a>
+        <a class="navbar-item" href="/settings">
+          Settings
+        </a>
       </div>
 
       <div class="navbar-end">
         <div class="navbar-item">
           <div class="buttons">
-            <a class="button is-dark">Github</a>
             <a class="button is-link" id="signout">Signout</a>
           </div>
         </div>
