--- a/src/_includes/partials/navbar.njk
+++ b/src/_includes/partials/navbar.njk
@@ -8,6 +8,9 @@
         <a class="navbar-item" href="/views">
           Views
         </a>
+        <a class="navbar-item" href="/filters">
+          Filters
+        </a>
         <a class="navbar-item" href="/dividends">
           Dividends
         </a>
