--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,13 +1,9 @@
 <footer class="footer">
   <div class="content has-text-centered">
     <p>
-      <strong>Bulma</strong> by <a href="https://jgthms.com">Jeremy Thomas</a>.
-      The source code is licensed
-      <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The
-      website content is licensed
-      <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/"
-        >CC BY NC SA 4.0</a
-      >.
+      <strong>MarketSentry</strong> by <a href="https://linkedin.com/in/dumindu-chathuranga" target="_blank">Dumindu Chathuranga</a> <br />
+      <a href="/licenses" target="_blank">Licenses</a> | 
+      <a href="/disclaimer" target="_blank">Disclaimer</a>
     </p>
   </div>
 </footer>
