--- a/src/_includes/pages.njk
+++ b/src/_includes/pages.njk
@@ -25,7 +25,7 @@ heroTitle: Hi investor,
   {% include "partials/footer.njk" %}
   <script>
     document.getElementById("signout").addEventListener("click", function(ev){
-        auth.signOut();
+        window.signout();
     });
   </script>
   </body>
