--- a/src/_includes/pages.njk
+++ b/src/_includes/pages.njk
@@ -14,7 +14,7 @@ heroTitle: Hi investor,
   </head>
   <body>
   {% include "partials/navbar.njk" %}
-  <section class="hero is-danger">
+  <section class="hero is-link">
     <div class="hero-body">
       <p class="title" id="page-hero-title">{{ heroTitle }}</p>
     </div>
