--- a/src/_includes/partials/navbar.njk
+++ b/src/_includes/partials/navbar.njk
@@ -1,4 +1,10 @@
  <nav class="navbar">
+   <div class="navbar-brand">
+    <a class="navbar-item" href="/">
+      <img class="mr-2" src="https://res.cloudinary.com/duxwfcvuy/image/upload/q_auto/f_auto/v1712902305/market_sentry_logo_iyrk8e.png" />
+      <span class="has-text-weight-bold">MarketSentry</span>
+    </a>
+    </div>
   <div class="container">
     <div id="navMenu" class="navbar-menu">
       <div class="navbar-start">
@@ -22,7 +28,7 @@
       <div class="navbar-end">
         <div class="navbar-item">
           <div class="buttons">
-            <a class="button is-link" id="signout">Signout</a>
+            <button class="button is-link" id="signout">Signout</button>
           </div>
         </div>
       </div>
