--- a/src/filter.njk
+++ b/src/filter.njk
@@ -1,7 +1,7 @@
 ---
 layout: pages.njk
-title: New filter
-heroTitle: New filter
+title: Filter
+heroTitle: Filter
 ---
 <div class="field">
     <label class="label">Filter name</label>
