--- a/src/filters.njk
+++ b/src/filters.njk
@@ -1,9 +1,9 @@
 ---
 layout: pages.njk
 title: Filters
-heroTitle: My filters
+heroTitle: My Filters
 ---
-<a href="/create-filter" class="button is-primary">Create new</a>
+<a href="/create-filter" class="button is-primary mt-4">Create new</a>
 <div class="columns is-multiline m-1" id="filterContainer">
     <img src="/images/loading.gif" alt="loading image" width="100">
     <!-- View card template
