--- a/src/settings.njk
+++ b/src/settings.njk
@@ -8,10 +8,12 @@ heroTitle: Settings
 <img src="/images/loading.gif" alt="loading image" width="100" id="loading-image">
 
 <div id="telegram-not-connected-message" style="display:none;">
-    To receive alerts via Telegram, connect your Telegram account by sending a message with the following token to the <a href="https://t.me/screeningappbot" target="_blank">ScreeningAppBot</a>. Please refresh this page after sending the token.
+    To receive alerts via Telegram, connect your Telegram account by sending a message with the following token to the <a href="https://t.me/MarketSentryBot" target="_blank">MarketSentryBot</a>. Please refresh this page after sending the token.
     <div class="notification mt-3" id="telegramToken">
         loading...
     </div>
+    <br />
+    If you encounter any issues or the bot is not responding, please reach out to <b>dumindu.chath@gmail.com</b> for assistance. 
 </div>
 
 <div id="telegram-connected-message" style="display:none;">
