--- a/src/views.njk
+++ b/src/views.njk
@@ -1,7 +1,7 @@
 ---
 layout: pages.njk
 title: Views
-heroTitle: Views
+heroTitle: My Views
 ---
 <button class="button is-primary m-4 js-modal-trigger" data-target="create-view-modal">Create new</button>
 <div class="columns is-multiline m-1" id="viewContainer">
