--- a/src/filter.njk
+++ b/src/filter.njk
@@ -24,7 +24,7 @@ heroTitle: Filter
             <div class="control">
                 <input class="input" type="text" placeholder="Parameter" id="parameterSearchBox">
             </div>
-            <p class="help">Ex: currentPrice, bookValue, dividendYield. <a href="#" target="_blank">Find more parameters</a></p>
+            <p class="help">Ex: currentPrice, bookValue, dividendYield. <a href="/parameters" target="_blank">Find more parameters</a></p>
         </div>
     </div>
     <div class="dropdown-menu" id="dropdown-menu" role="menu">
