add stats to footer

--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -4,6 +4,8 @@
       <strong>MarketSentry</strong> by <a href="https://linkedin.com/in/dumindu-chathuranga" target="_blank">Dumindu Chathuranga</a> <br />
       <a href="/licenses" target="_blank">Licenses</a> | 
       <a href="/disclaimer" target="_blank">Disclaimer</a>
+      <p id="footer-stat"></p>
     </p>
   </div>
 </footer>
+<script src="/scripts/pages/stats.js" type="module"></script>
