--- a/src/_includes/pages.njk
+++ b/src/_includes/pages.njk
@@ -1,5 +1,5 @@
 ---
-title: My Rad Blog
+title: MarketSentry
 heroTitle: Hi investor,
 ---
 <!DOCTYPE html>
@@ -24,8 +24,30 @@ heroTitle: Hi investor,
   </div>
   {% include "partials/footer.njk" %}
   <script>
-    document.getElementById("signout").addEventListener("click", function(ev){
-        window.signout();
+    document.addEventListener('DOMContentLoaded', () => {
+
+      document.getElementById("signout").addEventListener("click", function(ev){
+          window.signout();
+      });
+      
+      // Get all "navbar-burger" elements
+      const $navbarBurgers = Array.prototype.slice.call(document.querySelectorAll('.navbar-burger'), 0);
+
+      // Add a click event on each of them
+      $navbarBurgers.forEach( el => {
+        el.addEventListener('click', () => {
+
+          // Get the target from the "data-target" attribute
+          const target = el.dataset.target;
+          const $target = document.getElementById(target);
+
+          // Toggle the "is-active" class on both the "navbar-burger" and the "navbar-menu"
+          el.classList.toggle('is-active');
+          $target.classList.toggle('is-active');
+
+        });
+      });
+
     });
   </script>
   </body>
