--- a/src/_includes/partials/navbar.njk
+++ b/src/_includes/partials/navbar.njk
@@ -1,9 +1,15 @@
  <nav class="navbar">
    <div class="navbar-brand">
-    <a class="navbar-item" href="/">
-      <img class="mr-2" src="https://res.cloudinary.com/duxwfcvuy/image/upload/q_auto/f_auto/v1712902305/market_sentry_logo_iyrk8e.png" />
-      <span class="has-text-weight-bold">MarketSentry</span>
-    </a>
+      <a class="navbar-item" href="/">
+        <img class="mr-2" src="https://res.cloudinary.com/duxwfcvuy/image/upload/q_auto/f_auto/v1712902305/market_sentry_logo_iyrk8e.png" />
+        <span class="has-text-weight-bold">MarketSentry</span>
+      </a>
+      <a role="button" class="navbar-burger" data-target="navMenu" aria-label="menu" aria-expanded="false">
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+      </a>
     </div>
   <div class="container">
     <div id="navMenu" class="navbar-menu">
